{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 45,
  "lineage": "7fa20a88-a8e6-0e94-b9da-8c57c6336de2",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:169807124502:listener/app/slackroulette-alb-prod/f88028ad1d29a536/d8e9735532629ae0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:169807124502:listener/app/slackroulette-alb-prod/f88028ad1d29a536/d8e9735532629ae0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:169807124502:loadbalancer/app/slackroulette-alb-prod/f88028ad1d29a536",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:169807124502:listener/app/slackroulette-alb-prod/f88028ad1d29a536/64053d99d1ac78a3",
            "certificate_arn": "arn:aws:acm:us-east-1:169807124502:certificate/31081086-5f11-46d2-a9d6-f7dff6dcdf00",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:169807124502:targetgroup/slackroulette-tg-prod/7fc4718ad435b832",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:169807124502:listener/app/slackroulette-alb-prod/f88028ad1d29a536/64053d99d1ac78a3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:169807124502:loadbalancer/app/slackroulette-alb-prod/f88028ad1d29a536",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb_target_group.frontend",
            "aws_lb.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "frontend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:169807124502:targetgroup/slackroulette-tg-prod/7fc4718ad435b832",
            "arn_suffix": "targetgroup/slackroulette-tg-prod/7fc4718ad435b832",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:169807124502:targetgroup/slackroulette-tg-prod/7fc4718ad435b832",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "slackroulette-tg-prod",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-tg-prod"
            },
            "target_type": "ip",
            "vpc_id": "vpc-00ad415d53a9434c8"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02440ad3f760885e1",
            "domain": "vpc",
            "id": "eipalloc-01068b83f886c1077",
            "network_interface": "eni-060d05fddfa389c72",
            "private_dns": "ip-10-0-22-8.ec2.internal",
            "private_ip": "10.0.22.8",
            "public_dns": "ec2-52-55-46-94.compute-1.amazonaws.com",
            "public_ip": "52.55.46.94",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-eip-prod-001"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bf683876f2e1240a",
            "domain": "vpc",
            "id": "eipalloc-0b84332d1409de085",
            "network_interface": "eni-03a4cdcf75ffc1cd7",
            "private_dns": "ip-10-0-51-209.ec2.internal",
            "private_ip": "10.0.51.209",
            "public_dns": "ec2-54-210-165-34.compute-1.amazonaws.com",
            "public_ip": "54.210.165.34",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-eip-prod-002"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04aa552afe37060df",
            "domain": "vpc",
            "id": "eipalloc-05a92a19b2889b0d8",
            "network_interface": "eni-07b92057b27df7d7c",
            "private_dns": "ip-10-0-82-188.ec2.internal",
            "private_ip": "10.0.82.188",
            "public_dns": "ec2-34-193-207-237.compute-1.amazonaws.com",
            "public_ip": "34.193.207.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-eip-prod-003"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09da0ed72e9175a30",
            "owner_id": "169807124502",
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-igw-prod"
            },
            "vpc_id": "vpc-00ad415d53a9434c8"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:169807124502:loadbalancer/app/slackroulette-alb-prod/f88028ad1d29a536",
            "arn_suffix": "app/slackroulette-alb-prod/f88028ad1d29a536",
            "dns_name": "slackroulette-alb-prod-2032611641.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:169807124502:loadbalancer/app/slackroulette-alb-prod/f88028ad1d29a536",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "slackroulette-alb-prod",
            "security_groups": [
              "sg-065252aefe17f71fd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0236b72af96ca2816"
              },
              {
                "subnet_id": "subnet-0c1ae5250019d229c"
              },
              {
                "subnet_id": "subnet-0ec3e58931817c8b1"
              }
            ],
            "subnets": [
              "subnet-0236b72af96ca2816",
              "subnet-0c1ae5250019d229c",
              "subnet-0ec3e58931817c8b1"
            ],
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-alb-prod"
            },
            "vpc_id": "vpc-00ad415d53a9434c8",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01068b83f886c1077",
            "id": "nat-04859db36de99107c",
            "network_interface_id": "eni-060d05fddfa389c72",
            "private_ip": "10.0.22.8",
            "public_ip": "52.55.46.94",
            "subnet_id": "subnet-0236b72af96ca2816",
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-nat-prod-001"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b84332d1409de085",
            "id": "nat-0d2b1bcfbdd862db6",
            "network_interface_id": "eni-03a4cdcf75ffc1cd7",
            "private_ip": "10.0.51.209",
            "public_ip": "54.210.165.34",
            "subnet_id": "subnet-0ec3e58931817c8b1",
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-nat-prod-002"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a92a19b2889b0d8",
            "id": "nat-0dd3c794a2d504b60",
            "network_interface_id": "eni-07b92057b27df7d7c",
            "private_ip": "10.0.82.188",
            "public_ip": "34.193.207.237",
            "subnet_id": "subnet-0c1ae5250019d229c",
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-nat-prod-003"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0de64b32267f1af191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-04859db36de99107c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0de64b32267f1af19",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.main",
            "aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d57cb07bf5cf0be11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0d2b1bcfbdd862db6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d57cb07bf5cf0be1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.main",
            "aws_route_table.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-019954f94eb92cae91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0dd3c794a2d504b60",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-019954f94eb92cae9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.main",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09da0ed72e9175a30",
            "id": "r-rtb-0d209d4fd00cf289b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d209d4fd00cf289b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.main",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0de64b32267f1af19",
            "owner_id": "169807124502",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-04859db36de99107c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-routing-table-private-001"
            },
            "vpc_id": "vpc-00ad415d53a9434c8"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d57cb07bf5cf0be1",
            "owner_id": "169807124502",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0d2b1bcfbdd862db6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-routing-table-private-002"
            },
            "vpc_id": "vpc-00ad415d53a9434c8"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-019954f94eb92cae9",
            "owner_id": "169807124502",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0dd3c794a2d504b60",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-routing-table-private-003"
            },
            "vpc_id": "vpc-00ad415d53a9434c8"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d209d4fd00cf289b",
            "owner_id": "169807124502",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09da0ed72e9175a30",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "slackroulette-routing-table-public",
              "job Number": "1198561"
            },
            "vpc_id": "vpc-00ad415d53a9434c8"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07474d3e4587784ad",
            "route_table_id": "rtb-0de64b32267f1af19",
            "subnet_id": "subnet-0bc4b4d6af2f0aef9"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e32c7ceda10e6ff",
            "route_table_id": "rtb-0d57cb07bf5cf0be1",
            "subnet_id": "subnet-0d5a7d894ce50fbd7"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0898e882cd9d476c6",
            "route_table_id": "rtb-019954f94eb92cae9",
            "subnet_id": "subnet-08a54a66f02c8f7af"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08661bd2984c02768",
            "route_table_id": "rtb-0d209d4fd00cf289b",
            "subnet_id": "subnet-0236b72af96ca2816"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0277ec9c43e8bc5e2",
            "route_table_id": "rtb-0d209d4fd00cf289b",
            "subnet_id": "subnet-0ec3e58931817c8b1"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2187945b5fcbd1f",
            "route_table_id": "rtb-0d209d4fd00cf289b",
            "subnet_id": "subnet-0c1ae5250019d229c"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:169807124502:security-group/sg-065252aefe17f71fd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065252aefe17f71fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "slackroulette-sg-alb-prod",
            "name_prefix": null,
            "owner_id": "169807124502",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-sg-alb-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ad415d53a9434c8"
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:169807124502:security-group/sg-057a4d1c0d2f1a758",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057a4d1c0d2f1a758",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "slackroulette-sg-task-prod",
            "name_prefix": null,
            "owner_id": "169807124502",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-sg-task-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ad415d53a9434c8"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:169807124502:subnet/subnet-0bc4b4d6af2f0aef9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "id": "subnet-0bc4b4d6af2f0aef9",
            "map_public_ip_on_launch": false,
            "owner_id": "169807124502",
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-private-subnet-prod-001"
            },
            "vpc_id": "vpc-00ad415d53a9434c8"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:169807124502:subnet/subnet-0d5a7d894ce50fbd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-0d5a7d894ce50fbd7",
            "map_public_ip_on_launch": false,
            "owner_id": "169807124502",
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-private-subnet-prod-002"
            },
            "vpc_id": "vpc-00ad415d53a9434c8"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:169807124502:subnet/subnet-08a54a66f02c8f7af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/20",
            "id": "subnet-08a54a66f02c8f7af",
            "map_public_ip_on_launch": false,
            "owner_id": "169807124502",
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-private-subnet-prod-003"
            },
            "vpc_id": "vpc-00ad415d53a9434c8"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:169807124502:subnet/subnet-0236b72af96ca2816",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0236b72af96ca2816",
            "map_public_ip_on_launch": true,
            "owner_id": "169807124502",
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-public-subnet-prod-001"
            },
            "vpc_id": "vpc-00ad415d53a9434c8"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:169807124502:subnet/subnet-0ec3e58931817c8b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-0ec3e58931817c8b1",
            "map_public_ip_on_launch": true,
            "owner_id": "169807124502",
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-public-subnet-prod-002"
            },
            "vpc_id": "vpc-00ad415d53a9434c8"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:169807124502:subnet/subnet-0c1ae5250019d229c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.80.0/20",
            "id": "subnet-0c1ae5250019d229c",
            "map_public_ip_on_launch": true,
            "owner_id": "169807124502",
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-public-subnet-prod-003"
            },
            "vpc_id": "vpc-00ad415d53a9434c8"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:169807124502:vpc/vpc-00ad415d53a9434c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cadd84fccf930c22",
            "default_route_table_id": "rtb-062b7be0736eb8952",
            "default_security_group_id": "sg-05e0c68a546b8cacd",
            "dhcp_options_id": "dopt-688c970a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00ad415d53a9434c8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-062b7be0736eb8952",
            "owner_id": "169807124502",
            "tags": {
              "Environment": "prod",
              "Job Number": "1198561",
              "Name": "slackroulette-vpc-prod"
            }
          }
        }
      ]
    }
  ]
}